# CI_Demo

./: .travis.yml  LICENSE  MANFEST.in  MANIFEST.in  README.md  appveyor.yml  setup.cfg  setup.py
etc/: requirements.txt
my_pkg/: __init__.py  _version.py  hello.py
test/: __init__.py  test_hello.py
