; 这些配置是在处理完setup.py之后，python setup.py <args>命令处理之前进行处理的
; 所以the command-line options to setup.py会覆盖所有setup.cfg的options
; setup.cfg会覆盖setup.py中的option
;https://docs.python.org/3/distutils/configfile.html#id2
[nosetests]
verbosity=2
detailed-errors=1
with-ignore-docstrings=1
with-timer=1
timer-top-n=15
cover-package=my_pkg
logging-level=INFO

[metadata]
description-file = README.md
license_file = LICENSE
;long_description= Long discription